@@ -1,3 +1,7 @@
+2011-09-01 Matthias Scholz <ms@jammerhund.de>
+	* FeatureInstaller.java:
+		* Improve all addMainMenuItem() methods to returning the created JMenuItem
+
 2011-08-28 mmichaud <michael.michaud@free.fr>
     * [ID 3397856] VertexZValueStyle now extends a new TextBasedVertexStyle
       so that z of Points are displayed as well as z of Linestring vertices 
